--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E36b" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
@@ -8,7 +8,7 @@
         <!--Options-->
         <scene sceneID="uNN-Bb-X43">
             <objects>
-                <tableViewController id="adP-n7-Jrr" customClass="Options" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Options" id="adP-n7-Jrr" customClass="Options" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="vhy-D1-r2C">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -109,7 +109,7 @@
         <!--Calendar View Controller-->
         <scene sceneID="GHt-Ln-le2">
             <objects>
-                <viewController id="3oo-4v-qEy" customClass="CalendarViewController" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Calendar" id="3oo-4v-qEy" customClass="CalendarViewController" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wbg-kb-UZP"/>
                         <viewControllerLayoutGuide type="bottom" id="soQ-cD-gxb"/>
@@ -327,13 +327,7 @@
                             <outlet property="delegate" destination="dd2-at-RAg" id="zpk-xQ-7ce"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="GuI-xc-DYh">
-                        <barButtonItem key="leftBarButtonItem" image="calendar" style="plain" id="2hD-oK-lwZ">
-                            <connections>
-                                <segue destination="Avd-PZ-bJK" kind="modal" identifier="Calendar" id="Uu6-Xr-r03"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="GuI-xc-DYh"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Cv-Aa-1IF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -571,6 +565,7 @@
         <!--Navigation Controller-->
         <scene sceneID="CjF-6s-WZz">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9hn-mU-d22" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Avd-PZ-bJK" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="1pz-iV-Xt0"/>
@@ -583,7 +578,6 @@
                         <segue destination="3oo-4v-qEy" kind="relationship" relationship="rootViewController" id="Udn-Rb-LBb"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9hn-mU-d22" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="412" y="-3397"/>
         </scene>
@@ -591,7 +585,6 @@
     <resources>
         <image name="CN.png" width="24" height="16"/>
         <image name="US.png" width="24" height="16"/>
-        <image name="calendar" width="25" height="25"/>
         <image name="communion" width="30" height="30"/>
         <image name="daily" width="30" height="30"/>
         <image name="group" width="30" height="30"/>
